este commit aplicado ajusta a paginacao no dynamo
